Set jupyterlab to 2.0.0a1

--- a/base-notebook/Dockerfile
+++ b/base-notebook/Dockerfile
@@ -125,7 +125,7 @@ RUN set -x && \
         'mamba' \
         'notebook' \
         'jupyterhub' \
-        'jupyterlab' && \
+        'jupyterlab==2.0.0a1' && \
     rm micromamba && \
     # Pin major.minor version of python
     mamba list python | grep '^python ' | tr -s ' ' | cut -d ' ' -f 1,2 >> "${CONDA_DIR}/conda-meta/pinned" && \
