--- a/base-notebook/Dockerfile
+++ b/base-notebook/Dockerfile
@@ -85,7 +85,7 @@ RUN echo "auth requisite pam_deny.so" >> /etc/pam.d/su && \
 USER ${NB_UID}
 
 # Pin python version here, or set it to "default"
-ARG PYTHON_VERSION=3.10
+ARG PYTHON_VERSION=3.6.7
 
 # Setup work directory for backward-compatibility
 RUN mkdir "/home/${NB_USER}/work" && \
@@ -125,7 +125,7 @@ RUN set -x && \
         'mamba' \
         'notebook' \
         'jupyterhub' \
-        'jupyterlab==2.0.0a1' && \
+        'jupyterlab==0.35.4' && \
     rm micromamba && \
     # Pin major.minor version of python
     mamba list python | grep '^python ' | tr -s ' ' | cut -d ' ' -f 1,2 >> "${CONDA_DIR}/conda-meta/pinned" && \
